Apply Dark Mode Feature and Fix Width and Header Margin and Padding

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,8 +5,8 @@
 /* Layer Base */
 @layer base {
     body {
-        @apply px-4 mx-auto sm:max-w-sm md:max-w-2xl lg:max-w-7xl;
-        @apply dark:bg-black dark:text-gray-100 bg-gray-100 text-gray-900
+        @apply px-4 mx-auto sm:max-w-sm md:max-w-2xl lg:max-w-6xl;
+        @apply dark:bg-neutral-900 dark:text-gray-100 bg-gray-100 text-gray-900
     }
 
     .highlight:before {
